tests/trybuild/06-unhandled-const.stderr
error[E0277]: the trait bound `[u8; 300]: Serialize` is not satisfied
  --> $DIR/06-unhandled-const.rs:13:9
   |
13 |         arr_a: [u8; BUFSIZE],
   |         ^^^^^^^^^^^^^^^^^^^^ the trait `Serialize` is not implemented for `[u8; 300]`
   |
   = help: the following implementations were found:
             <[T; 0] as Serialize>
             <[T; 10] as Serialize>
             <[T; 11] as Serialize>
             <[T; 12] as Serialize>
           and 30 others
   = note: required by `main::_::_serde::ser::SerializeStruct::serialize_field`

error[E0277]: the trait bound `[u8; 300]: Deserialize<'_>` is not satisfied
  --> $DIR/06-unhandled-const.rs:13:9
   |
13 |         arr_a: [u8; BUFSIZE],
   |         ^^^^^^^^^^^^^^^^^^^^ the trait `Deserialize<'_>` is not implemented for `[u8; 300]`
   |
   = help: the following implementations were found:
             <&'a [u8] as Deserialize<'de>>
             <[T; 0] as Deserialize<'de>>
             <[T; 10] as Deserialize<'de>>
             <[T; 11] as Deserialize<'de>>
           and 30 others
   = note: required by `next_element`

error[E0277]: the trait bound `[u8; 300]: Deserialize<'_>` is not satisfied
  --> $DIR/06-unhandled-const.rs:13:9
   |
13 |         arr_a: [u8; BUFSIZE],
   |         ^^^^^^^^^^^^^^^^^^^^ the trait `Deserialize<'_>` is not implemented for `[u8; 300]`
   |
   = help: the following implementations were found:
             <&'a [u8] as Deserialize<'de>>
             <[T; 0] as Deserialize<'de>>
             <[T; 10] as Deserialize<'de>>
             <[T; 11] as Deserialize<'de>>
           and 30 others
   = note: required by `next_value`
